--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <input type="text" id="searchInput" placeholder="Enter search query">
     <button type="submit">Search</button>
   </form>
-
+<script src="main.js"></script>
 <body>
   
 </body>
