--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <title>Image Search</title>
 </head>
 <body>
-  <form id="searchForm">
-    <input type="text" id="searchInput" placeholder="Enter search query">
-    <button type="submit">Search</button>
-  </form>
-<script src="main.js"></script>
-<body>
+  <div class="form-box"><form id="searchForm">
+    <input type="text" id="searchInput"  placeholder="Enter search query">
+    <button class="sbmt-btn" type="submit">Search</button>
+  </form></div>
+  <span id="loader" class="loader"></span>
+  
+  <div id="gallery" class="gallery"></div>
+<script type="module" src="main.js"></script>
+
   
 </body>
 
