--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,7 @@
   <span id="loader" class="loader"></span>
   
   <div id="gallery" class="gallery"></div>
-<script type="module" src="main.js"></script>
-
-  
+<script type="module" src="./main.js"></script>
 </body>
 
 </html>
